# Quart-Admin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
quart_admin/: __init__.py  admin.py
quart_admin/auth/: __init__.py  base.py  quart_auth.py
quart_admin/database/: base.py  sqlalchemy.py
quart_admin/forms/: __init__.py  wtforms.py
quart_admin/templates/admin/: base.html  create.html  index.html  list.html
quart_admin/views/: base.py
src/quart_admin/: __init__.py  admin.py  config.py
src/quart_admin/auth/: helpers.py
src/quart_admin/database/: __init__.py  sqlalchemy.py
src/quart_admin/forms/: base.py  wtforms.py
src/quart_admin/templates/admin/: base.html  create.html  details.html  edit.html  form.html  index.html  list.html
src/quart_admin/views/: __init__.py  base.py  model.py
tests/: __init__.py  conftest.py
tests/functional/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py
tests/unit/auth/: __init__.py
tests/unit/database/: __init__.py  test_base.py  test_import_handling.py  test_sqlalchemy.py
tests/unit/forms/: __init__.py  test_wtforms_simple.py
tests/unit/views/: __init__.py  test_model_view.py
