[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project]
name = "quart-admin"
version = "0.1.0"
authors = [
    {name = "Hugo Baldwin", email = "windlab@gmail.com"},
]
description = "Simple and extensible admin interface framework for Quart"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["quart", "admin", "crud", "async", "web", "interface"]
dependencies = [
    "quart>=0.20.0",
]

[project.optional-dependencies]
sqlalchemy = [
    "sqlalchemy[asyncio]>=2.0.43",
]
wtforms = [
    "wtforms>=3.2.1",
    "flask-wtf>=1.2.2",
]
auth = [
    "quart-auth>=0.11.0",
]
all = [
    "sqlalchemy[asyncio]>=2.0.43",
    "wtforms>=3.2.1",
    "flask-wtf>=1.2.2",
    "quart-auth>=0.11.0",
]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "black>=25.1.0",
    "ruff>=0.12.7",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force-single-line = true

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "W",  # pycodestyle warnings
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
